# S3_DeformFDM

./: CMakeLists.txt  LICENSE  Pre_processing.docx  README.md  ShapeLab.pro
DataSet/G_CODE/: ring_Gcode.txt
DataSet/TET_MODEL/: AnkleBaseV1.tet  bridgeSmall.tet  ring.tet  topopt_new4.tet
DataSet/TOOL_PATH/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+163 more)
DataSet/fabricationSource/ankleBase/waypoint/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+18 more)
DataSet/fabricationSource/armadillo/waypoint/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  (+483 more)
DataSet/fabricationTest/test_QvectorField/: CSquare_QvectorField.txt  armadillo2_QvectorField_boundary.txt  armadillo4_QvectorField.txt
DataSet/fabricationTest/test_ScalrOrHeightField/: CSquare_heightField.txt  armadillo2_heightField_boundary.txt  armadillo2_scalarField_boundary.txt  armadillo4_heightField.txt  armadillo4_scalarField.txt  bunny_cut6_heightField.txt  bunny_cut6_scalarField.txt
DataSet/fabricationTest/test_stressField/: armadillo4_stressField.txt  bunny_cut6_stressField.txt
DataSet/fem_result/: CSquare2.txt  YogaNew.txt  bridgeSmall_new.txt  bunnyhead3.txt  connecter3DSimple.txt  ring3.txt  topopt.txt
DataSet/remesh_operation/: fileName.txt  remesh_compatibleLayer.bat  remesh_operation.mlx  remesh_slimmedLayer.bat
DataSet/selection_file/: AnkleBaseV1.txt  CSquare.txt  CSquare3.txt  GEbracket2.txt  airbus_topopt1.txt  armadillo3.txt  armadillo4.txt  bunny_cut2.txt  bunny_cut3.txt  bunny_cut5.txt  bunny_cut6.txt  bunny_cut_SL.txt  curved_Bar1.txt  curvedprinting.txt  dome.txt  domeL.txt  flange.txt  ring2.txt  ring4.txt  teapot2.txt  topopt_new2.txt  topopt_new3.txt  topopt_new_SR.txt  turbine_blade.txt  wedge.txt  wing_mirror_step1.txt  wing_mirror_step2.txt  wing_mirror_step3.txt  wing_mirror_step4.txt
DataSet/support_less_initial_guess/: fertility_HF_initialGuess.txt  ring_SL_initialGuess.txt  tree3_SL_initialGuess.txt
GLKLib/: .cproject  .project  CMakeLists.txt  GLKCameraTool.h  GLKGLList.h  GLKGeometry.cpp  GLKGeometry.h  GLKGraph.cpp  GLKGraph.h  GLKHeap.cpp  GLKHeap.h  GLKLib.aps  GLKLib.cpp  GLKLib.h  GLKLib.pro  GLKLib.vcxproj.filters  GLKMatrixLib.cpp  GLKMatrixLib.h  GLKNearestNeighbor.cpp  GLKNearestNeighbor.h  GLKObList.cpp  GLKObList.h  GLKRational.cpp  GLKRational.h  GLKSparseMatrix.cpp  GLKSparseMatrix.h  GLKSparseMatrixDirectSolver.cpp  GLKSparseMatrixDirectSolver.h  GLKSparseMatrixIterativeSolver.cpp  GLKSparseMatrixIterativeSolver.h  InteractiveTool.cpp  InteractiveTool.h  glu.h.txt  resource.h
GLKLib/x64/Debug/qmake/: qtvars_x64_Debug.props
GLKLib/x64/Release/GLKLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  GLKLib.write.1u.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog
GLKLib/x64/Release/qmake/: qtvars_x64_Release.props
QMeshLib/: .project  CMakeLists.txt  PMBody.h  PolygenMesh.cpp  PolygenMesh.h  QMeshCluster.cpp  QMeshCluster.h  QMeshEdge.cpp  QMeshEdge.h  QMeshFace.cpp  QMeshFace.h  QMeshLib.pro  QMeshLib.vcxproj.filters  QMeshNode.cpp  QMeshNode.h  QMeshPatch.cpp  QMeshPatch.h  QMeshTetra.cpp  QMeshTetra.h  stdafx.cpp  stdafx.h
QMeshLib/.qmake2cmake/: subdir-of
QMeshLib/GeneratedFiles/: moc_predefs.h
QMeshLib/x64/Debug/qmake/: qtvars_x64_Debug.props
QMeshLib/x64/Release/QMeshLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
QMeshLib/x64/Release/qmake/: qtvars_x64_Release.props
ShapeLab/: .cproject  .project  CMakeLists.txt  DeformTet.cpp  DeformTet.h  Fabrication.cpp  Fabrication.h  FileIO.cpp  FileIO.h  GcodeGeneration.cpp  GcodeGeneration.h  Graph.cpp  Graph.h  IsoLayerGeneration.cpp  IsoLayerGeneration.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PrincipleStressField.cpp  PrincipleStressField.h  ShapeLab.pro  ShapeLab.qrc  ShapeLab.vcxproj.filters  SupportGeneration.cpp  SupportGeneration.h  alphanum.hpp  dirent_win.h  heatMethod.cpp  heatMethod.h  heatmethodfield.cpp  heatmethodfield.h  main.cpp  toolpathGeneration.cpp  toolpathGeneration.h
ShapeLab/GeneratedFiles/: qrc_ShapeLab.cpp  ui_MainWindow.h
ShapeLab/GeneratedFiles/Debug/: moc_MainWindow.cpp
ShapeLab/GeneratedFiles/Release/: moc_MainWindow.cpp
ShapeLab/x64/Release/ShapeLab.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ShapeLab.lastbuildstate  ShapeLab.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
ThirdPartyDependence/: StdAfx.h  io.h
ThirdPartyDependence/PQPLib/: BV.cpp  BV.h  Build.cpp  GetTime.h  OBB_Disjoint.h  PQP.cpp  PQP.h  PQP_Compile.h  PQP_Internal.h  ReadMe.txt  RectDist.h  TriDist.cpp  TriDist.h
ThirdPartyDependence/QHullLib/: geom.cpp  geom.h  geom2.cpp  global.cpp  io.cpp  io.h  men.cpp  merge.cpp  merge.h  poly.cpp  poly2.cpp  qconvex.cpp  qhull.cpp  qhull.h  qhull_a.h  qset.cpp  qset.h  rbox.cpp  stat.cpp  stat.h  user.cpp
ThirdPartyDependence/QHullLib/Examples/: qdelaun.cpp  qhalf.cpp  qvoronoi.cpp  unix.cpp  user_eg.cpp  user_eg2.cpp
ThirdPartyDependence/glut/: GlU32.Lib  OpenGL32.Lib  glew32d.lib
(+1008 files in other folders)
